# MiMo-TUI

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mimo_tui/: __init__.py  __main__.py  app.py  cli.py  constants.py
src/mimo_tui/agent/: approval.py  loop.py  modes.py  prompts.py  registry.py
src/mimo_tui/audio/: formats.py  player.py
src/mimo_tui/client/: anthropic_client.py  errors.py  openai_client.py  protocol_selector.py  schemas.py  sse.py
src/mimo_tui/config/: defaults.toml  loader.py  schema.py
src/mimo_tui/i18n/: translator.py
src/mimo_tui/i18n/locales/: en.yaml  zh_CN.yaml
src/mimo_tui/images/: detect.py  pipeline.py
src/mimo_tui/mcp/: manager.py
src/mimo_tui/providers/: capabilities.py  detect.py
src/mimo_tui/sessions/: migrations.py  models.py  store.py
src/mimo_tui/tools/: apply_patch.py  base.py  diff.py  edit_file.py  git_tools.py  glob.py  grep.py  python_exec.py  read_file.py  sandbox.py  shell_exec.py  todo_write.py  web_fetch.py  write_file.py
src/mimo_tui/tui/: commands.py  theme.py
src/mimo_tui/tui/screens/: approval.py  first_run.py  main.py  model_picker.py
src/mimo_tui/tui/widgets/: activity_bar.py  chat_log.py  composer.py  header_bar.py  reasoning_pane.py  sessions_list.py  sidebar_panel.py  status_bar.py
src/mimo_tui/utils/: logging.py  paths.py
tests/: conftest.py
tests/unit/agent/: test_loop.py
tests/unit/audio/: test_formats.py
tests/unit/client/: test_sse.py
tests/unit/config/: test_config.py
tests/unit/i18n/: test_i18n.py
tests/unit/sessions/: test_store.py
tests/unit/tools/: test_apply_patch.py  test_diff.py  test_git_tools.py  test_python_exec.py  test_tools.py
tests/unit/tui/: test_first_run.py
